# Cpp-snake-game

./: .gitignore  .session.vim  CMakeLists.txt  build.sh  compile_commands.json
include/R2D/core/: Resources.h
include/R2D/utility/: Print.h  Strings.h
src/: .session.vim  config.h  main.cpp
src/core/: Resources.cpp
src/game/: Snake.cpp  Snake.h  SnakePlayer.cpp  SnakePlayer.h
src/utility/: .session.vim  File.cpp  Strings.cpp  Strings.h
